  AbstractDatabase.createConnection() now throws DatabaseException instead of SQLException, for error message localization, changes bubbled all the way up
  EntityApplicationPanel, better handling of exceptions during startup
  DefaultEntityLookupModel.getEntitySelectCriteria() ignored any additional criteria in case of a wildcard search string
  AbstractBeanValueLink.getValueClass() added
  IntBeanValueLink/DoubleBeanValueLink, usePrimitives parameter added to constructor, tests added
  Entities.define() now throws IllegalArgumentException when the entity has already been defined
  EntityConnectionServer, remote loading of domain models disabled, not that useful
  EntityConnectionServer, initializes default domain model classes in static initializer
  EntityApplicationPanel, improved startup error handling
  EntityDefinitionImpl, default entity comparator now replaces spaces with underscores before sorting with collator
  FilteredTableModel, add/removeTableModelClearedListener() added
  MasterDetailPanel, some renaming going on
  EntityPanel, fixed a bug introduced during last commit
  MasterDetailPanel, more renaming
  EntityTablePanel.bindEvents(), moved some code to FilteredTablePanel
  FilteredTablePanel.sortingEnabled, scrollToCenter() and isCellVisible() added
  JFreeChart library updated to 1.0.13
  ExceptionDialog.showExceptionDialog(), event dispatch thread related bug fixed
  Util.collateSansSpaces() added, Util.collate(List) uses it by default
  FilteredTablePanel.selectTableColumns(), added 'Show all columns' button
  DoubleField, IntField, fixed a bug, fields displayed sci-notation for large numbers, format added
  DoubleValueLink, IntValueLink fixed according to the above
  Util.collateSansSpaces() overloaded for list
  EntityTablePanel, initialization refactored, initializeTable moved from constructor to initializePanel()
  Util.countLines() added