@@ -559,6 +559,11 @@ public abstract class AbstractFilteredTableModel<R, C> extends AbstractTableMode
   }
 
   /** {@inheritDoc} */
+  public final void removeItems(final int fromIndex, final int toIndex) {
+    visibleItems.subList(fromIndex, toIndex).clear();
+  }
+
+  /** {@inheritDoc} */
   public final TableColumnModel getColumnModel() {
     return columnModel;
   }
